--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -87,7 +87,7 @@
                 </li>
             </ul>
             <div class="d-flex">
-                <a class="nav-link text-white register" href="#" >{{'Register' | translate}}</a>
+                <a class="nav-link text-white register me-3" href="#" >{{'Register' | translate}}</a>
             </div>
         </div>
     </div>
