--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -1,9 +1,8 @@
 <!-- Banner -->
 
 <Section id="slider" class="slider-section">
+    <img src="/assets/images/Banner-bg.png" class="img-bg-one" alt="">
     <div class="container pt-5">
-        <div class="img-bg-one"></div>
-        <div class="img-bg-two"></div>
         <div id="carouselExampleCaptions" class="carousel slide carousel-height" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -18,7 +17,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-white">
                             <div class="slider-padding d-none d-sm-block"></div>
-                            <h5>{{data.title}}</h5>
+                            <h5 class="carousel-heading">{{data.title}}</h5>
                             <p>{{data.description}}</p>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -30,7 +29,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-white">
                             <div class="slider-padding d-none d-sm-block"></div>
-                            <h5>{{data.title2}}</h5>
+                            <h5 class="carousel-heading">{{data.title2}}</h5>
                             <p>{{data.description1}}</p>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -42,7 +41,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-white">
                             <div class="slider-padding d-none d-sm-block"></div>
-                            <h5>{{data.title3}}</h5>
+                            <h5 class="carousel-heading">{{data.title3}}</h5>
                             <p>{{data.description3}}</p>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
