--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,17 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-/* body {
-    font: normal 14px;
-    letter-spacing: 0px;
+@font-face {
+    font-family: "Helvetica";
+    src: url("assets/fonts/helvetica-neue-master/HelveticaNeue-Regular.otf");
+}
+
+body {
+    font-family: 'Helvetica',Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font: normal 13px;
+    letter-spacing: inherit;
     color: #4B4B4B;
-    opacity: 1;
-} */
+}
 
 a {
     color: #0d6efd;
@@ -23,4 +28,16 @@ a {
     min-width: 90px;
     border-radius: 20px;
     border: 1px solid #c1c1c1;
+}
+.modal-btn-close{
+    position: absolute;
+    top: -2%;
+    right: -1%;
+    border: 2px solid #fff;
+    border-radius: 35px;
+    background-color: #000;
+}
+.modal-btn-close > i{
+    font-size: 19px;
+    color: #fff;
 }
